--- a/src/components/CourseTable.css
+++ b/src/components/CourseTable.css
@@ -1,79 +1,98 @@
-.course__item {
-  border: 1px solid black;
-  padding: 10px;
+.course-table-section {
+
 }
 
-.course-table__item__study-event--container {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+.course-table-section__header {
+  margin: 30px 0 0 0;
 }
 
-.course-table__item__study-event {
-  margin: 0 7.5px 2px 7.5px;
-}
-
-.course-table {
-  justify-content: center;
-}
-
-.course-table__table {
-  width: 100%;
+.course-list__container {
   text-align: left;
 }
 
-.course-table__section {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.course-table__row {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.course-table__item {
-}
-
-.course-table__item__body {
+.course-list__header {
   display: flex;
   flex-direction: row;
   width: 100%;
 }
 
-.course-table__item__header {
+.col--name {
+  width: 70%;
+}
+
+.col--date {
+  width: 25%;
+}
+
+.col--credits {
+  width: 5%;
+  min-width: 50px;
+}
+
+.course-list {
+  list-style-type: none;
+  padding: 0;
+  /* background-color: #4DD0E1; */
+}
+
+.course-list__item {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  border-bottom: 1px solid black;
+}
+
+.course-list__item__body {
+  display: flex;
+  flex-direction: row;
+  width: 70%;
+}
+
+.course-list__item__header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   margin: 0;
   padding: 0;
 }
 
-.course-table__item__date {
+.course-list__item__header__link {
+  margin: 0.2em 6px 0 0;
+  text-decoration: none;
 }
 
-.course-table__item__header-text {
+.course-list__item__date {
+  width: 25%;
+}
+
+.course-list__item__credits {
+  width: 5%;
+}
+
+.course-list__item__header-text {
   margin: 0 4px 0 1px;
 }
 
-.course-table__item__info {
+.course-list__item__info {
+  background-color: #f5f5f5;
   display: flex;
   flex-direction: column;
-  width: 100%;
   margin: 0 0 2px 15px;
 }
 
-.course-table__item__format {
+.course-list__item__format {
 }
 
-.course-table__item__enrollment {
+.course-list__item__enrollment {
 }
 
-.course-table__item__teacher__list {
+.course-list__item__teacher__list {
   list-style-type: none;
   margin: 0;
   padding: 0;
 }
 
-.course-table__item__teacher__item {
+.course-list__item__teacher__item {
   margin: 0;
 }
