--- a/src/components/CourseTable.css
+++ b/src/components/CourseTable.css
@@ -41,6 +41,8 @@
   align-items: center;
   width: 100%;
   border-bottom: 1px solid black;
+  animation-name: to-max-width;
+  animation-duration: 2s;
 }
 
 .course-list__item__body {
@@ -79,6 +81,17 @@
   display: flex;
   flex-direction: column;
   margin: 0 0 2px 15px;
+  border-bottom: 1px solid black;
+  /* transform: translateY(-220px);
+  transition: transform 400ms ease-in; */
+}
+
+.slide-in {
+  transform: translateY(0);
+}
+
+.slide-out {
+  transform: translateY(-220px);
 }
 
 .course-list__item__format {
