--- a/src/components/CourseTable.css
+++ b/src/components/CourseTable.css
@@ -30,32 +30,44 @@
   min-width: 50px;
 }
 
+.col--key {
+  width: 50%;
+}
+
+.col--value {
+  width: 50%;
+}
+
 .course-list {
   list-style-type: none;
   padding: 0;
-  /* background-color: #4DD0E1; */
+}
+
+.course-list__item__container {
+  border: 1px solid #bbbbbb;
+  border-top-left-radius: 5px ;
+  border-top-right-radius: 5px ;
+  margin-bottom: 5px;
+  cursor: pointer;
 }
 
 .course-list__item {
   display: flex;
   flex-direction: row;
   align-items: center;
-  width: 100%;
-  border-bottom: 1px solid black;
   animation-name: to-max-width;
   animation-duration: 2s;
+  padding: 5px;
 }
 
-.course-list__item__body {
-  display: flex;
-  flex-direction: row;
-  width: 70%;
+.course-list__item__course-page {
+  overflow-x: hidden;
+  text-overflow: ellipsis;
 }
 
 .course-list__item__header {
   display: flex;
   flex-direction: row;
-  align-items: center;
   margin: 0;
   padding: 0;
 }
@@ -66,25 +78,50 @@
 }
 
 .course-list__item__date {
-  width: 25%;
 }
 
 .course-list__item__credits {
-  width: 5%;
 }
 
 .course-list__item__header-text {
-  margin: 0 4px 0 1px;
+  margin: 0 4px 0 2px;
 }
 
-.course-list__item__info {
+.course-list__item__body {
   background-color: #f5f5f5;
   display: flex;
   flex-direction: column;
-  margin: 0 0 2px 15px;
-  border-bottom: 1px solid black;
+  padding: 5px 10px;
   /* transform: translateY(-220px);
   transition: transform 400ms ease-in; */
+}
+
+.course-list__item__info {
+  display: flex;
+}
+
+.course-list__item__key {
+  font-weight: bold;
+}
+
+.course-list__item__button-row {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.course-list__item__button {
+  /* margin: 2px 0; */
+  text-decoration: none;
+  padding: 5px 10px;
+  background-color: #fff;
+  border: 1px solid #bbbbbb;
+  border-radius: 5px;
+}
+
+.course-list__item__button-link {
+  text-decoration: none;
+  color: #000;
+  font-weight: bold;
 }
 
 .slide-in {
@@ -93,9 +130,6 @@
 
 .slide-out {
   transform: translateY(-220px);
-}
-
-.course-list__item__format {
 }
 
 .course-list__item__enrollment {
@@ -109,4 +143,13 @@
 
 .course-list__item__teacher__item {
   margin: 0;
+}
+
+@media screen and (min-width: 670px) {
+  .col--key {
+    width: 20%;
+  }
+  .col--value {
+    width: 80%;
+  }
 }
