--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600');
+
+
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .hidden {
