--- a/src/components/CourseTable.css
+++ b/src/components/CourseTable.css
@@ -45,8 +45,7 @@
 
 .course-list__item__container {
   border: 1px solid #bbbbbb;
-  border-top-left-radius: 5px ;
-  border-top-right-radius: 5px ;
+  border-radius: 3px;
   margin-bottom: 5px;
   cursor: pointer;
 }
@@ -122,6 +121,70 @@
   text-decoration: none;
   color: #000;
   font-weight: bold;
+}
+
+.course-list__item__groups__group {
+  display: flex;
+  flex-direction: row;
+}
+.course-list__item__groups__group:nth-child(2n) {
+  background-color: #cccccc;
+}
+
+.course-list__item__groups__header {
+  display: flex;
+  flex-direction: row;
+}
+
+.course-list__item__group__name {
+  width: 15%;
+}
+
+.course-list__item__group__teacher {
+  width: 25%;
+}
+
+.course-list__item__group__enrolled {
+  width: 7%;
+}
+
+.course-list__item__group__maximum {
+  width: 7%;
+}
+
+.course-list__item__group__time {
+  width: 35%;
+}
+
+.course-list__item__group__classroom {
+  width: 15%;
+}
+
+.course-list__item__group__time--full {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 70%;
+}
+
+.course-list__item__group__time--chunk {
+  width: 33%;
+}
+
+.course-list__item__group__classroom--full {
+  width: 30%;
+}
+
+.course-list__item__groups__group__schedule__container {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+}
+
+.course-list__item__groups__group__schedule {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .slide-in {
