--- a/src/pages/FrontPage.css
+++ b/src/pages/FrontPage.css
@@ -1,13 +1,42 @@
-.front-page--container {
+.front-page__container {
   text-align: center;
   margin: auto;
   padding: 0 10px;
 }
 
-.course-search--container {
+.front-page__top-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.studyfield__container {
   display: flex;
   flex-direction: row;
   justify-content: center;
+}
+
+.course-search__container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.search__form-group {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin: 10px 0 10px 0;
+}
+
+.search__form-group__input {
+  font-size: 1.5em;
+  height: 20px;
+  width: 100%;
+  max-width: 500px;
+  padding: 5px 2px 5px 2px;
+  border-radius: 5px;
 }
 
 .main-header {
@@ -15,7 +44,7 @@
 }
 
 @media screen and (min-width: 1040px){
-  .front-page--container {
+  .front-page__container {
     max-width: 1200px;
   }
 }
