--- a/src/pages/FrontPage.scss
+++ b/src/pages/FrontPage.scss
@@ -43,7 +43,7 @@
   margin: 40px 0 40px 0;
 }
 
-@media screen and (min-width: 1040px){
+@media screen and (min-width: $break-desktop){
   .front-page__container {
     max-width: 1200px;
   }
