--- a/src/components/CourseTableSection.scss
+++ b/src/components/CourseTableSection.scss
@@ -50,7 +50,7 @@
 }
 
 .course-list__item__container {
-  border: 1px solid #bbbbbb;
+  border: 1px solid $color-grey-border;
   border-radius: 3px;
   margin-bottom: 5px;
   cursor: pointer;
@@ -126,8 +126,8 @@
   /* margin: 2px 0; */
   text-decoration: none;
   padding: 5px 10px;
-  background-color: #fff;
-  border: 1px solid #bbbbbb;
+  background-color: $color-main;
+  border: 1px solid $color-grey-border;
   border-radius: 5px;
 }
 
