--- a/src/components/GroupTable.scss
+++ b/src/components/GroupTable.scss
@@ -1,38 +1,3 @@
-.group-table {
-  &__header {
-    display: flex;
-    flex-direction: row;
-  
-    @media screen and (max-width: $break-tablet) {
-      display: none;
-      visibility: hidden;
-    }
-  }
-
-  &__item {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 100%;
-    
-    &:nth-child(2n) {
-      background-color: $color-group-list-item;    
-    }
-
-    @media screen and (max-width: $break-tablet) {
-      flex-direction: column;
-      width: 100%;
-
-      > div {
-        border-bottom: 1px solid black;
-        &:last-child {
-          border-bottom: 0;
-        }
-      }
-    }
-  }
-}
-
 @mixin visible-on-tablet($display) {
   display: none;
   visibility: hidden;
@@ -60,8 +25,48 @@
   width: $width;
 }
 
+.group-table {
+  &__header {
+    display: flex;
+    flex-direction: row;
+  
+    @media screen and (max-width: $break-tablet) {
+      display: none;
+      visibility: hidden;
+    }
+  }
+
+  &__item {
+    width: 100%;
+    
+    &:nth-child(2n) {
+      background-color: $color-group-list-item;    
+    }
+
+    @media screen and (max-width: $break-tablet) {
+      flex-direction: column;
+      width: 100%;
+    }
+
+    &--rows {
+      @include visible-on-tablet(flex);
+      flex-direction: column;
+      width: 100%;
+    }
+
+    &--columns {
+      @include hidden-on-tablet(flex);
+      width: 100%;
+    }
+  }
+}
+
 .row--inline {
   @include visible-on-tablet(flex);
+  border-bottom: 1px solid $color-dark-border;
+  &:last-child {
+    border-bottom: 0;
+  }
   
   > div {
     &:first-child {
@@ -75,37 +80,25 @@
 
 .group {
   &__name {
-    width: 15%;
-    @include hidden-on-tablet(block);
-    
+    width: 15%;    
   }
 
   &__teacher {
     width: 25%;
-    @include hidden-on-tablet(block);
-    
   }
 
   &__enrolled {
     width: 7%;
-    @include hidden-on-tablet(block);
   }
 
   &__maximum {
     width: 7%;
-    @include hidden-on-tablet(block);
-  }
-
-  &__schedule__header {
-    width: 46%;
-    @include hidden-on-tablet(block);
   }
 
   &__schedule__wrapper {
     display: flex;
     flex-direction: column;
     width: 46%;
-    @include hidden-on-tablet(block);    
   }
 
   &__schedule__container {
@@ -129,21 +122,9 @@
     justify-content: space-between;
     width: 100%;
 
-    @media screen and (max-width: $break-tablet) {
-      display: none;
-      visibility: hidden;
-    }
-
     &--inline {
       display: flex;
       flex-direction: column;
-      display: none;
-      visibility: hidden;
-    
-      @media screen and (max-width: $break-tablet) {
-        display: block;
-        visibility: visible;
-      }
     }
   }
 }
