--- a/src/variables.scss
+++ b/src/variables.scss
@@ -7,6 +7,9 @@ $color-main: #fff;
 $color-course-background: #f5f5f5;
 $color-group-list-item: #ccc;
 
+$color-grey-border: #bbb;
+$color-dark-border: #927272;
+
 $color-btn-default: #fff;
 
 
