--- a/src/variables.scss
+++ b/src/variables.scss
@@ -8,7 +8,7 @@ $color-course-background: #f5f5f5;
 $color-group-list-item: #ccc;
 
 $color-grey-border: #bbb;
-$color-dark-border: #927272;
+$color-dark-border: #5a4747;
 
 $color-btn-default: #fff;
 
