--- a/src/components/CourseTableSection.scss
+++ b/src/components/CourseTableSection.scss
@@ -1,19 +1,22 @@
 .course-table-section {
-
+  &__header {
+    margin: 30px 0 10px 0;    
+  }
 }
 
-.course-table-section__header {
-  margin: 30px 0 10px 0;
-}
+.course-list {
+  list-style-type: none;
+  padding: 0;
 
-.course-list__container {
-  text-align: left;
-}
+  &__container {
+    text-align: left;    
+  }
 
-.course-list__header {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
+  &__header {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+  }
 }
 
 .col--enrollment {
@@ -36,121 +39,70 @@
   min-width: 50px;
 }
 
-.col--key {
-  width: 30%;
-}
 
-.col--value {
-  width: 70%;
-}
+.course {
+  &__container {
+    border: 1px solid $color-grey-border;
+    border-radius: 3px;
+    margin-bottom: 5px;
+  }
 
-.course-list {
-  list-style-type: none;
-  padding: 0;
-}
+  &__title-box {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    animation-name: to-max-width;
+    animation-duration: 2s;
+    padding: 5px;
+    cursor: pointer;
+  }
 
-/* Below single course specific classes */
+  &__header {
+    display: flex;
+    flex-direction: row;
+    margin: 0;
+    padding: 0;
 
-.course__container {
-  border: 1px solid $color-grey-border;
-  border-radius: 3px;
-  margin-bottom: 5px;
-}
+    &__link {
+      margin: 0.2em 6px 0 0;
+      text-decoration: none;
+    }
 
-.course__title-box {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  animation-name: to-max-width;
-  animation-duration: 2s;
-  padding: 5px;
-  cursor: pointer;  
-}
+    &__text {
+      margin: 0 4px 0 2px;
+      word-break: break-word;
+    }
+  }
 
-.course__course-page {
-  overflow-x: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-}
+  &__body {
+    background-color: $color-course-background;
+    display: flex;
+    flex-direction: column;
+    padding: 5px 10px;
+    /* transform: translateY(-220px);
+    transition: transform 400ms ease-in; */
+  }
 
-.course__weboodi {
-  overflow-x: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-}
+  &__btn {
+    /* margin: 2px 0; */
+    text-decoration: none;
+    padding: 5px 10px;
+    background-color: $color-main;
+    border: 1px solid $color-grey-border;
+    border-radius: 5px;
 
-.course__header {
-  display: flex;
-  flex-direction: row;
-  margin: 0;
-  padding: 0;
-}
+    &__container {
+      display: flex;
+      justify-content: flex-end;
+    }
 
-.course__header__link {
-  margin: 0.2em 6px 0 0;
-  text-decoration: none;
-}
-
-.course__date {
-}
-
-.course__credits {
-}
-
-.course__header-text {
-  margin: 0 4px 0 2px;
-  word-break: break-word;
-}
-
-.course__body {
-  background-color: $color-course-background;
-  display: flex;
-  flex-direction: column;
-  padding: 5px 10px;
-  /* transform: translateY(-220px);
-  transition: transform 400ms ease-in; */
-}
-
-.course__info {
-  display: flex;
-}
-
-.course__key {
-  font-weight: bold;
-}
-
-.course__button-row {
-  display: flex;
-  justify-content: flex-end;
-}
-
-.course__button {
-  /* margin: 2px 0; */
-  text-decoration: none;
-  padding: 5px 10px;
-  background-color: $color-main;
-  border: 1px solid $color-grey-border;
-  border-radius: 5px;
-}
-
-.course__button-link {
-  text-decoration: none;
-  color: #000;
-  font-weight: bold;
-}
-
-.course__enrollment {
-}
-
-.course-teachers {
-  > span {
-    margin: 0 10px 0 0;
-    &:last-child {
-      margin: 0;
+    &__link {
+      text-decoration: none;
+      color: #000;
+      font-weight: bold;
     }
   }
 }
-
 
 .slide-in {
   transform: translateY(0);
