--- a/src/pages/FrontPage.scss
+++ b/src/pages/FrontPage.scss
@@ -33,22 +33,33 @@
   justify-content: center;
 }
 
-.search__form-group {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-  margin: 10px 0 10px 0;
+.search {
+  &__form-group {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin: 10px 0 10px 0;
+  }
+
+  &__form-group__input {
+    font-size: 1.5em;
+    height: 20px;
+    width: 100%;
+    max-width: 500px;
+    padding: 5px 2px 5px 2px;
+    border-radius: 5px;
+    font-size: 16px;
+    padding: 10px;
+    appearance: none;
+    border: 1px solid $color-grey-border;
+  }
+
+  &__form-group__input:focus {
+    outline: none;
+  }
 }
 
-.search__form-group__input {
-  font-size: 1.5em;
-  height: 20px;
-  width: 100%;
-  max-width: 500px;
-  padding: 5px 2px 5px 2px;
-  border-radius: 5px;
-}
 
 .main-header {
   margin: 40px 0 40px 0;
