--- a/src/pages/FrontPage.scss
+++ b/src/pages/FrontPage.scss
@@ -7,7 +7,8 @@
 .front-page__top-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  flex: 1;
+  height: 100%;
 }
 
 .studyfield__container {
@@ -27,37 +28,38 @@
   }
 }
 
-.course-search__container {
+.search__container {
   display: flex;
   flex-direction: row;
-  justify-content: center;
 }
 
-.search {
-  &__form-group {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    margin: 10px 0 10px 0;
-  }
+.search__input-group {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 800px;
+  position: relative;
+  padding: 10px 0 10px;
+  flex: 1;
+  display: flex;
+}
 
-  &__form-group__input {
-    font-size: 1.5em;
-    height: 20px;
-    width: 100%;
-    max-width: 500px;
-    padding: 5px 2px 5px 2px;
-    border-radius: 5px;
-    font-size: 16px;
-    padding: 10px;
-    appearance: none;
-    border: 1px solid $color-grey-border;
-  }
+.search__input {
+  flex: 1;
+  font-size: 1.5em;
+  height: 20px;
+  border-radius: 5px;
+  font-size: calc(16px);
+  padding: 10px 10px 10px 32px;
+  outline: 0;
+  border: 1px solid $color-grey-border;
+}
 
-  &__form-group__input:focus {
-    outline: none;
-  }
+.search__icon {
+  top: 22px;
+  left: 10px;
+  position: absolute;
+  pointer-events: none;
+  font-size: calc(16px);
 }
 
 
