Enhance study fields input styles

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,3 +5,10 @@ body {
   padding: 0;
   font-family: 'Open Sans', sans-serif;
 }
+
+input:focus, 
+select:focus, 
+textarea:focus, 
+button:focus { 
+  outline: none; 
+} 
