--- a/src/pages/FrontPage.scss
+++ b/src/pages/FrontPage.scss
@@ -53,7 +53,7 @@
 }
 
 .search__container {
-  margin: 15px 0 0;
+  margin: 30px 0 0 0;
   display: flex;
   flex-direction: row;
 }
@@ -83,7 +83,11 @@
 
 
 .main-header {
-  margin: 30px 0px;
+  margin: 40px 0 40px 0;
+
+  @media screen and (max-width: $break-tablet){
+    margin: 20px 0 20px 0;
+  }
 }
 
 @media screen and (min-width: $break-desktop){
