--- a/src/pages/FrontPage.scss
+++ b/src/pages/FrontPage.scss
@@ -81,7 +81,6 @@
   }
 }
 
-
 .main-header {
   margin: 40px 0 40px 0;
 
@@ -94,6 +93,10 @@
   .front-page__container {
     max-width: 1200px;
   }
+}
+
+.about-link {
+  margin: 20px 0 20px 0; 
 }
 
 .btn {
