--- a/src/variables.scss
+++ b/src/variables.scss
@@ -20,3 +20,10 @@ $color-btn-default: #fff;
   visibility: hidden;
   display: none;
 }
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
